2006-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-self-insert-commands): Doc fix.

	* mm-uu.el (mm-uu-pgp-signed-test): Erase prompt.
	(mm-uu-pgp-encrypted-test): Ditto.
	(mm-uu-pgp-encrypted-extract-1): Make sure there's a blank line
	between header and body; return application/pgp-encrypted handle
	if decryption failed; decode decrypted body by charset.

	* mm-decode.el (mm-automatic-display): Don't make application/pgp
	element match to application/pgp-*.

2006-04-23  Andreas Seltenreich  <andreas+ding@gate450.dyndns.org>  (tiny change)

	* nnweb.el (nnweb-google-wash-article): Sync up to new Google
	HTML.

2006-04-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (mail-source-call-script): Message the error
	string.

2006-04-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el (gnus-byte-compile): Use it.

2006-04-22  xyblor  <fake@invalid.email>  (Tiny change.)

	* gnus-util.el (kill-empty-logs): New function.

2006-04-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-mail-alias-type): Doc fix.
	(message-mail-alias-type-p): New function.
	(message-send): Use it.
	(message-mode): Ditto.
	(message-strip-forbidden-properties): Ditto.

	* ecomplete.el (ecomplete-database-file-coding-system): New
	variable.
	(ecomplete-save): Use it.
	(ecomplete-setup): Use it.

2006-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-self-insert-commands): New variable.
	(message-strip-forbidden-properties): Use it.

2006-04-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-put-addresses-in-ecomplete): Use a regexp
	that doesn't make XEmacs choke.

2006-04-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-util.el (gnus-replace-in-string): Prefer
	replace-regexp-in-string over of replace-in-string.

2006-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-select-frame-set-input-focus): Use
	select-frame-set-input-focus if it is available in XEmacs; use